--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiking website</title>
+    <script src="https://kit.fontawesome.com/d257e45a63.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div>
-                <img src="./img/logo.png" alt="logo">
+    <header class="header">
+        <nav class="nav">
+            <div class="logo">
+                <img class="logo_img" src="./img/logo.png" alt="logo">
             </div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#home">Menu</a></li>
-                <li><a href="#home">Our Story</a></li>
-                <li><a href="#home">Contact Us</a></li>
+            <ul class="navigation">
+                <li class="nav_item"><a class="nav_link" href="#home">Home</a></li>
+                <li class="nav_item"><a class="nav_link" href="#home">Menu</a></li>
+                <li class="nav_item"><a class="nav_link" href="#home">Our Story</a></li>
+                <li class="nav_item"><a class="nav_link" href="#home">Contact Us</a></li>
             </ul>
-            <div>
-                <input type="text">
+            <div class="search">
+                <input class="search_input" type="text">
+                <span class="search_icon"><i class="fa-solid fa-magnifying-glass"></i></span>
             </div>
         </nav>
         <div>
-            <h1>It's time for hiking</h1>
-            <p>Aperski</p>
-            <button>Read More</button>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula, vitae porta turpis dapibus. Quisque faucibus purus ligula, ut cursus metus auctor et. Maecenas ipsum felis, gravida eu odio eget, mattis porttitor leo. Maecenas dictum nunc et rhoncus mattis. Morbi nec imperdiet dui, gravida egestas libero. Phasellus id rhoncus lorem. Nullam imperdiet nibh orci, vitae mollis nulla mattis vitae. </span>
+            <h1 class="heading">It's time for hiking</h1>
+            <p class="sub_heading">Aperski</p>
+            <button class="header_btn">Read More</button>
+            <span class="header_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula, vitae porta turpis dapibus. Quisque faucibus purus ligula, ut cursus metus auctor et. Maecenas ipsum felis, gravida eu odio eget, mattis porttitor leo. Maecenas dictum nunc et rhoncus mattis. Morbi nec imperdiet dui, gravida egestas libero. Phasellus id rhoncus lorem. Nullam imperdiet nibh orci, vitae mollis nulla mattis vitae. </span>
         </div>
     </header>
 
@@ -130,10 +133,10 @@
             <h3></h3>
             <p></p>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
             </ul>
         </div>
         <div>
