--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo">
                 <img class="logo_img" src="./img/logo.png" alt="logo">
             </div>
-            <ul class="navigation">
+            <ul class="navbar">
                 <li class="nav_item"><a class="nav_link" href="#home">Home</a></li>
                 <li class="nav_item"><a class="nav_link" href="#home">Menu</a></li>
                 <li class="nav_item"><a class="nav_link" href="#home">Our Story</a></li>
@@ -25,48 +25,54 @@
                 <span class="search_icon"><i class="fa-solid fa-magnifying-glass"></i></span>
             </div>
         </nav>
-        <div>
-            <h1 class="heading">It's time for hiking</h1>
-            <p class="sub_heading">Aperski</p>
+        <div class="heading_content">
+            <h1 class="heading">It's time</h1>
+            <p class="sub_heading">For Hiking</p>
+            <p class="sub_heading1">Aperski</p>
             <button class="header_btn">Read More</button>
-            <span class="header_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula, vitae porta turpis dapibus. Quisque faucibus purus ligula, ut cursus metus auctor et. Maecenas ipsum felis, gravida eu odio eget, mattis porttitor leo. Maecenas dictum nunc et rhoncus mattis. Morbi nec imperdiet dui, gravida egestas libero. Phasellus id rhoncus lorem. Nullam imperdiet nibh orci, vitae mollis nulla mattis vitae. </span>
+            <p class="header_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula, vitae porta turpis dapibus. Quisque faucibus purus ligula, ut cursus metus auctor et.</p>
         </div>
+        <div class="shade_buttom"></div>
     </header>
 
     <main>
-        <section>
-            <h2>Let's go</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula, vitae porta turpis dapibus. Quisque faucibus purus ligula,</p>
-            <div>
-                <div>
-                    <div>
-                        <img src="./img/s1.png" alt="s1">
+        <section class="letsgo">
+          <div class="container">
+                <h2 class="letsgo_heading">Let's go</h2>
+                <p class="letsgo_subp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula, vitae porta turpis dapibus. Quisque faucibus purus ligula,</p>
+            <div class="articles">
+                    <div class="article">
+                        <div class="article_img">
+                            <img src="./img/s1.png" alt="s1">
+                        </div>
+                        <div class="article_content">
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula</p>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula</p>
+                    <div class="article">
+                        <div class="article_img">
+                            <img src="./img/s2.png" alt="s1">
+                        </div>
+                        <div class="article_content">
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula</p>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <div>
-                        <img src="./img/s2.png" alt="s2">
+                    <div class="article">
+                        <div class="article_img">
+                            <img src="./img/s3.png" alt="s1">
+                        </div>
+                        <div class="article_content">
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula</p>
+                        </div>
                     </div>
-                    <div>
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula</p>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <img src="./img/s3.png" alt="s3">
-                    </div>
-                    <div>
-                        <h3>Lorem Ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed posuere nibh at nulla vehicula</p>
-                    </div>
-                </div>
-            </div>
-            <button>Show More</button>
+           </div>
+                <button class="letsgo_btn">Show More</button>
+          </div>
+        </div>
+
         </section>
         <section>
             <div>
