--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="shade_top"></div>
         <nav class="nav">
             <div class="logo">
                 <img class="logo_img" src="./img/logo.png" alt="logo">
@@ -72,108 +73,119 @@
                 <button class="letsgo_btn">Show More</button>
           </div>
         </div>
-
         </section>
-        <section>
-            <div>
-                <div>
+        <section class="dispr">
+            <div class="dispr_container dis">
+                <div class="dispr_img">
                     <img src="./img/ds.png" alt="ds">
                 </div>
-                <div>
-                    <h3></h3>
-                    <p></p>
-                    <button></button>
+                <div class="dispr_content">
+                    <h3>Discount up to 50% All Excursions</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris.</p>
+                    <button class="dispr_btn">Read More</button>
                 </div>
             </div>
-            <div>
-                <div>
-                    <h3></h3>
-                    <p></p>
-                    <button></button>
+            <div class="dispr_container promo">
+                <div class="dispr_content">
+                    <h3>January's Promo :</h3>
+                    <h3>Buy 1 Get 1 Free!</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris.</p>
+                    <button class="dispr_btn">Read More</button>
                 </div>
-                <div>
+                <div class="dispr_img">
                     <img src="./img/promo.png" alt="promo">
                 </div>
             </div>
         </section>
-        <section>
-            <h2></h2>
-            <p></p>
+        <section class="hiking">
+            <div class="shade_top"></div>
+            <h2 class="hiking_heading">Hiking in the mountains</h2>
+            <p class="hiking_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris. Donec purus ex, ornare eu efficitur non, auctor sed nisl.</p>
+            <div class="shade_buttom"></div>
         </section>
-        <section>
-            <h2></h2>
+        <section class="explore"> 
+        <div class="shade_top"></div>
+            <div class="explore_container">
+            <h2 class="explore_heading">Explore</h2>
+            <h2 class="explore_heading world">the world</h2>
+           </div>
+            <div class="shade_buttom"></div>
         </section>
-        <section>
-            <div>
-                <div>
-                    <h3></h3>
-                    <p></p>
+        <section class="quotes">
+            <div class="container">
+                <div class="quotes_flexy">
+                    <div class="quotes_item">
+                        <h3 class="quotes_heading">Lorem Ipsum</h3>
+                        <p class="quotes_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris. Donec purus ex</p>
+                    </div>
+                    <div class="quotes_item">
+                        <h3 class="quotes_heading">Lorem Ipsum</h3>
+                        <p class="quotes_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris. Donec purus ex</p>
+                    </div>              
+                      <div class="quotes_item">
+                        <h3 class="quotes_heading">Lorem Ipsum</h3>
+                        <p class="quotes_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris. Donec purus ex</p>
+                    </div>
                 </div>
-                <div>
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <div>
-                    <h3></h3>
-                    <p></p>
+                <div class="quotes_bot">
+                    <div class="fontawsome"><i class="fa-solid fa-quote-right"></i></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris. Donec purus ex</p>
+                    <p>Lorem ipsum</p>
                 </div>
             </div>
-            <div>
-                <div class="fontawsome"></div>
-                <p></p>
-                <p></p>
-            </div>
         </section>
-        <section>
-            <h2></h2>
-            <p></p>
-            <div>
+        <section class="subscribe">
+            <div class="shade_top"></div>
+            <h2 class="subscribe_heading">Title Here</h2>
+            <p class="subscribe_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum facilisis mauris. </p>
+            <div class="subscribe_input">
                 <input type="text" placeholder="Email">
-                <span>Subscribe</span>
+                <span class="subscribe_btn">Subscribe</span>
             </div>
+            <div class="shade_buttom"></div>
         </section>
 
     </main>
-    <footer>
-        <div>
-            <h3></h3>
-            <p></p>
-            <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-            </ul>
-        </div>
-        <div>
-            <h3></h3>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </div>
-        <div>
-            <h3></h3>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </div>
-        <div>
-            <h3></h3>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </div>
-
+    <footer class="footer">
+        <div class="shade_top"></div>
+            <div class="footer_2">
+                <h3>Title Here</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt nunc enim, et lacinia dolor commodo vel. Aenean elementum eleifend orci et tincidunt.</p>
+                <ul>
+                    <li><a class="footer_link" href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a class="footer_link" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a class="footer_link" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a class="footer_link" href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer_1">
+                <h3>About</h3>
+                <ul>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Our Team</a></li>
+                    <li><a href="#">Brand</a></li>
+                    <li><a href="#">Terms&Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer_1">
+                <h3>Services</h3>
+                <ul>
+                    <li><a href="#">How to Order</a></li>
+                    <li><a href="#">Our product</a></li>
+                    <li><a href="#">Order Status</a></li>
+                    <li><a href="#">Promo</a></li>
+                    <li><a href="#">Payment Method</a></li>
+                </ul>
+            </div>
+            <div class="footer_1">
+                <h3>Other</h3>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
     </footer>
 </body>
 </html>
