--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header class="header">
+        <div class="scrollTop">
+            <i class="fa-solid fa-circle-arrow-up"></i>
+        </div>
         <div class="shade_top"></div>
         <nav class="nav">
             <div class="logo">
@@ -24,6 +27,11 @@
             <div class="search">
                 <input class="search_input" type="text">
                 <span class="search_icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+            </div>
+            <div class="bars_mobile active">
+                <div class="bars_icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
         </nav>
         <div class="heading_content">
@@ -188,4 +196,5 @@
             </div>
     </footer>
 </body>
+<script src="./js/main.js"></script>
 </html>
